update lexicon to include placeholders in select2 state examples

--- a/views/lexicon/forms/select2.html.twig
+++ b/views/lexicon/forms/select2.html.twig
@@ -369,6 +369,7 @@
             'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
+            'placeholder': 'Please choose',
             'help': 'Highlight whether an action elsewhere affects an input',
             'options': [
                 {
@@ -387,6 +388,7 @@
             'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
+            'placeholder': 'Please choose',
             'help': 'Something good happened',
             'options': [
                 {
@@ -406,6 +408,7 @@
             'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
+            'placeholder': 'Please choose',
             'help': 'Something bad happened',
             'options': [
                 {
@@ -424,6 +427,7 @@
             'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
+            'placeholder': 'Please choose',
             'help': 'Automatically added if using <code>error</code> option',
             'options': [
                 {
@@ -442,6 +446,7 @@
             'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
+            'placeholder': 'Please choose',
             'help': 'Stop! Can’t touch this',
             'options': [
                 {
@@ -460,6 +465,7 @@
         form.select2({
             'id': 'guid-' ~ random(),
             'label': 'Disabled option',
+            'placeholder': 'Please choose',
             'options': [
                 {
                     'label': 'Value one',
