--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -64,7 +64,7 @@
             {{ _settings|raw }}
         </section>
         {% endif %}
-        <main class="tab__content">
+        <main class="tab__content" id="skip-target">
             {% block tab_content %}{% endblock %}
         </main>
         {% if _hasSidebar == true %}
