--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -64,9 +64,9 @@
             {{ _settings|raw }}
         </section>
         {% endif %}
-        <div class="tab__content">
+        <main class="tab__content" id="skip-target">
             {% block tab_content %}{% endblock %}
-        </div>
+        </main>
         {% if _hasSidebar == true %}
         <aside class="tab__sidebar" aria-label="additional information">
             {{ _sidebar|raw }}
